# orbitfabric

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  clean_room_concern.yml  config.yml  documentation_feedback.yml  feature_request.yml  mission_model_feedback.yml
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  CLEAN_ROOM_POLICY.md  DEMO_WALKTHROUGH.md  DEVELOPMENT.md  PROJECT_CHARTER.md  QUICKSTART.md  ROADMAP.md  index.md
docs/adr/: ADR-0001-mission-model-first.md  ADR-0003-yaml-multifile-mission-model.md  ADR-0006-payload-contract-model.md  ADR-0007-mission-data-chain-before-runtime.md  ADR-0008-data-product-and-storage-contracts.md  ADR-0009-contact-windows-and-downlink-flow-contracts.md  ADR-0010-commandability-and-autonomy-contracts.md  ADR-0011-generated-runtime-skeleton-boundary.md  ADR-0012-ground-integration-artifacts-boundary.md  ADR-0013-contract-introspection-surfaces.md  ADR-0014-v0-9-plugin-and-relationship-surface-boundaries.md  ADR-0015-extensibility-boundary-contract-no-execution.md  adr_0002_python_toolchain_first.md  adr_0004_no_flight_runtime_in_v_0_1.md  adr_0005_lint_as_core_feature.md
docs/comms/: payload-contract-model-announcement.md
docs/reference/: cli-contract-v1.md  commandability-contract-model.md  contact-downlink-contract-model.md  contract-introspection-surface.md  coverage-summary-surface.md  dashboard-coverage-foundation.md  dashboard-coverage-regression-confidence.md  dashboard-summary-surface.md  data-flow-evidence.md  data-product-contract-model.md  entity-index-surface.md  json-reports-v0.1.md  (+22 more)
tests/: test_cli.py  test_coverage_summary_export.py  test_dashboard_summary_export.py  test_data_flow_docs_generator.py  test_data_product_invalid_fixtures.py  test_doc_generator.py  test_docs_generator.py  test_entity_index_cli.py  test_entity_index_export.py  test_ground_contract.py  test_ground_csv_export.py  test_ground_json_export.py  test_ground_manifest.py  test_ground_markdown_export.py  test_lint_commandability.py  test_lint_contacts.py  test_lint_engine.py  test_lint_engineering_rules.py  test_lint_json_report.py  test_model_diagnostic.py  test_model_loader.py  test_model_summary_export.py  test_payload_contract_invalid_fixtures.py  test_post_v1_candidate_core_surfaces.py  test_relationship_manifest_cli.py  test_relationship_manifest_examples.py  test_relationship_manifest_export.py  test_runtime_contract.py  test_runtime_cpp17_generator.py  test_runtime_manifest.py  test_runtime_naming.py  test_scenario_loader.py  test_scenario_run_index_export.py  test_scenario_runner.py  test_sim_json_report.py  test_sim_log_writer.py  test_v1_golden_core_surfaces.py  test_workspace_relative_cli_defaults.py
(+123 files in other folders)
